# MTG-Query

./: README.md  constants.py  data.py  example.env  fetch_data.py  mtgquery.py  pyproject.toml  tools.py
examples/: 01-simple-attribute-filters.md  02-gameplay-effect.md  03-synergy.md  05-follow-up-question.md  follow-up-questions.md
