[project]
name = "mtgquery"
version = "0.1.0"
description = "MTG natural language card search"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "langchain",
    "langchain-deepseek",
    "langchain-openrouter",
    "langchain-openai",
    "jupyterlab",
    "levenshtein",
    "requests",
    "rich"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

