[project]
name = "MTG-Query"
version = "0.2.0"
description = "MTG natural language card search"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.6.2",
    "langchain>=1.3.14",
    "langchain-deepseek>=1.1.0",
    "levenshtein>=0.27.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
]

